updated compose to match image version

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 services:
   decantador:
     container_name: decantador
-    image: rlproto/picture:picture-v1.6  # Use the existing 'picture' image from Docker Hub
+    image: rlproto/saveimage:saveimage-v1.0  # Use the existing 'picture' image from Docker Hub
     network_mode: bridge
     restart: unless-stopped
     volumes:
