last commit with running aplication

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,33 +2,43 @@ version: '3'
 services:
   decantador:
     container_name: decantador
-    image: rlproto/saveimage:saveimage-v1.0  # Use the existing 'picture' image from Docker Hub
-    network_mode: bridge
+    image: rlproto/saveimage:saveimage-v1.0 
+    #build:
+      #context: ./
+      #dockerfile: dockerfile
+    networks:
+      - sodavision_sv-network
     restart: unless-stopped
     volumes:
-      #- decantador:/data
-      - /var/lib/docker/volumes/picture_decantador:/app/data
+      - /var/lib/docker/volumes/saveimage_decantador:/app/data
     environment:
       OPC_SERVER_URL: "opc.tcp://10.15.160.149:49312"
-      TAG_NAME: "ns=2;s=BRASSAGEM.PLC1.decantador_MOSTO.SORBA.PHASE"
-      PRODUCT_TAG_NAME: "ns=2;s=BRASSAGEM.PLC1.decantador_MOSTO.SORBA.PROGNO"
-      CAMERA_INDEX: "0"
-      EQUIPMENT: "decantador"
-      VALID_STEPS: "1;0;1,2;0;1,3;0;1,4;0;1,5;0;1,6;0;1,7;0;1,8;0;1,9;0;1"
+      TAG_NAME: "ns=2;s=BRASSAGEM.PLC1.WHIRLPOOL.SORBA.PHASE"
+      #TAG_NAME: "ns=2;s=SODA_TEMPLATE.FILTRACAO.RASP_PASSO"
+      PRODUCT_TAG_NAME: "ns=2;s=BRASSAGEM.PLC1.WHIRLPOOL.SORBA.PROGNO"
+      EQUIPMENT: "DECANTADOR"
+      VALID_STEPS: "1;0;1,2;0;1,4;0;2,7;0;1,13;0;1"
       NUMBER_OF_PICTURES: "10"
-      
-      #100;0;1
-      #100 -> PASSO
-      #0 -> DELAY OU INTERVALO
-      #1 > ESTRATÉGIA
-
-      #ESTRATÉGIA:
-      #1 -> ENTRADA DO PASSO
-      #2 -> SAÍDA DO PASSO
-      #3 -> INTERVALO DE TEMPO DURANTE O PASSO
-
-      #1 -> ENTRADA DO PASSO COM DELAY
+    ports:
+      - "8000:8000"
 
     command: ["python", "app.py"]
+
 volumes:
   decantador:
+
+networks:
+  sodavision_sv-network:
+    external: true
+
+        #100;0;1S
+        #100 -> PASSO
+        #0 -> DELAY OU INTERVALO
+        #1 > ESTRATÉGIA
+
+        #ESTRATÉGIA:
+        #1 -> ENTRADA DO PASSO
+        #2 -> SAÍDA DO PASSO
+        #3 -> INTERVALO DE TEMPO DURANTE O PASSO
+
+        #1 -> ENTRADA DO PASSO COM DELAY
